<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/px20"
            android:orientation="vertical"
            app:layout_constraintVertical_bias="0.01"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_message"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px150"
                    android:gravity="top"
                    android:textSize="@dimen/size15"
                    android:hint="@string/label_message" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_red"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size20"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="@string/label_red" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_green"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size20"
                    android:textColor="@android:color/holo_green_dark"
                    android:text="@string/label_green" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_blue"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size20"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/label_blue" />

            </com.google.android.material.chip.ChipGroup>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="@dimen/px20"
                android:layout_marginRight="40dp"
                android:textColor="@color/white"
                android:background="@drawable/ic_button_bg"
                android:text="@string/label_update"
                android:textSize="@dimen/size18"
                android:textAllCaps="false" />


            <TextView
                android:id="@+id/tv_message"
                android:layout_marginTop="@dimen/px40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size18" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>